@@ -41,7 +41,7 @@ typedef uint32_t char32_t;
 #endif
 #endif
 
-#define COURIER_UNICODE_VERSION 220
+#define COURIER_UNICODE_VERSION @HVERSION@
 
 /*
 ** The system default character set, from the locale.
