@@ -1,3 +1,11 @@
+2021-02-13  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* courier-unicode-version.m4: split version checking macro into its
+	own m4 file.
+
+	* unicode::bidi_calc - an empty string with an explicit embedding
+	level should return the requested embedding level.
+
 2.2
 2020-11-05  Sam Varshavchik  <mrsam@courier-mta.com>
 
